Update templates path + revisiting UI

--- a/generator/templates/src/main/java/api/adapters/datasources/xxx/XxxMapper.java.j2
+++ b/generator/templates/src/main/java/api/adapters/datasources/xxx/XxxMapper.java.j2
@@ -1,7 +1,7 @@
-package com.{{company.lowercase}}.{{project.lowercase}}.api.adapters.datasources.{{table}};
+package {{ package_name }}.api.adapters.datasources.{{table}};
 
-import com.{{company.lowercase}}.{{project.lowercase}}.api.adapters.datasources.{{table}}.model.{{Table}}Entity;
-import com.{{company.lowercase}}.{{project.lowercase}}.api.application.{{table}}.model.{{Table}};
+import {{ package_name }}.api.adapters.datasources.{{table}}.model.{{Table}}Entity;
+import {{ package_name }}.api.application.{{table}}.model.{{Table}};
 import jakarta.annotation.Nullable;
 
 import java.util.Collection;
