--- a/generator/templates/src/main/java/api/adapters/datasources/xxx/model/XxxEntity.java.j2
+++ b/generator/templates/src/main/java/api/adapters/datasources/xxx/model/XxxEntity.java.j2
@@ -1,4 +1,4 @@
-package com.{{ company.lowercase }}.{{ project.lowercase }}.api.adapters.datasources.{{ table }}.model;
+package {{ package_name }}.api.adapters.datasources.{{ table }}.model;
 
 {% for import in get_required_imports(fields) %}
 import {{ import }};
