--- a/generator/templates/src/main/java/api/adapters/rest/controllers/xxx/model/XxxSchema.java.j2
+++ b/generator/templates/src/main/java/api/adapters/rest/controllers/xxx/model/XxxSchema.java.j2
@@ -1,4 +1,4 @@
-package com.{{ company.lowercase }}.{{ project.lowercase }}.api.adapters.rest.controllers.{{ table }}.model;
+package {{ package_name }}.api.adapters.rest.controllers.{{ table }}.model;
 
 import jakarta.validation.constraints.*;
 import lombok.*;
