--- a/generator/templates/src/main/java/api/application/xxx/XxxDatasourcePort.java.j2
+++ b/generator/templates/src/main/java/api/application/xxx/XxxDatasourcePort.java.j2
@@ -1,6 +1,6 @@
-package com.odigo.annuaireservice.api.application.{{package}};
+package {{ package_name }}.api.application.{{ table }};
 
-import com.odigo.annuaireservice.api.application.{{package}}.model.{{Table}};
+import {{ package_name }}.api.application.{{ table }}.model.{{ Table }};
 import jakarta.annotation.Nullable;
 import java.util.List;
 
