--- a/generator/templates/src/main/java/api/application/xxx/model/Xxx.java.j2
+++ b/generator/templates/src/main/java/api/application/xxx/model/Xxx.java.j2
@@ -1,4 +1,4 @@
-package com.{{ company.lowercase }}.{{ project.lowercase }}.api.application.{{ table }}.model;
+package {{ package_name }}.api.application.{{ table }}.model;
 
 import lombok.*;
 
