--- a/generator/templates/src/main/java/api/Application.java.j2
+++ b/generator/templates/src/main/java/api/Application.java.j2
@@ -1,4 +1,4 @@
-package com.{{ company.lowercase }}.{{ project.lowercase }};
+package {{ package_name }};
 
 import io.quarkus.runtime.Quarkus;
 import io.quarkus.runtime.annotations.QuarkusMain;
