--- a/generator/templates/src/main/java/api/adapters/rest/controllers/xxx/XxxController.java.j2
+++ b/generator/templates/src/main/java/api/adapters/rest/controllers/xxx/XxxController.java.j2
@@ -1,7 +1,7 @@
-package com.{{ company.lowercase }}.{{ project.lowercase }}.api.adapters.rest.controllers.{{ table }};
+package {{ package_name }}.api.adapters.rest.controllers.{{ table }};
 
-import com.{{ company.lowercase }}.{{ project.lowercase }}.api.application.{{ table }}.model.{{ Table }};
-import com.{{ company.lowercase }}.{{ project.lowercase }}.api.application.{{ table }}.ports.in.{{ Table }}UseCase;
+import {{ package_name }}.api.application.{{ table }}.model.{{ Table }};
+import {{ package_name }}.api.application.{{ table }}.ports.in.{{ Table }}UseCase;
 import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
